...
               
               // Set custom font
               addButton.titleLabel?.font = UIFont.boldSystemFont(ofSize: 35)
               addButton.setTitleColor(UIColor.white, for: .normal)
               
               // that`s thing for testing
               addButton.accessibilityIdentifier = "addOrder"
        
               // Create a UIBarButtonItem with the custom button as a custom view
               let addBarButton = UIBarButtonItem(customView: addButton)
               
               // Assign the UIBarButtonItem to the right bar button item

...
        return configuration
    }
    
    // func to process our message that we get from checkoutVC to show an alert
    func alertComfirmedOrder(message: String) {
        DispatchQueue.main.asyncAfter(deadline: .now() + 1) { [weak self] in
            let ac = UIAlertController(title: "Accepted", message: message, preferredStyle: .alert)
            ac.addAction(UIAlertAction(title: "OK", style: .default))
            self?.present(ac, animated: true)
        }
    }

    
...
