...
    var menu: [Menu]!
    
    override func viewDidLoad() {
        super.viewDidLoad()
        
        navigationController?.setTitleColor()
        title = "Menu"
        navigationItem.largeTitleDisplayMode = .never
    }
    
    
    deinit {
        print("MenuCollectionViewController - deinit")
...
